welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: Missing closing brace `}' assumed here
def FlowerCase() {
^FlowerCase:5: error: Missing closing brace `}' assumed here
{
^